--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,3 @@
-streamlit==1.24.0
-opencv-python-headless==4.10.0.84
-Pillow==11.0.0
-pandas==2.2.3
-qrcode==7.3.1
-GitPython==3.1.43
 altair==5.4.1
 attrs==24.2.0
 blinker==1.9.0
@@ -12,6 +6,7 @@ certifi==2024.8.30
 charset-normalizer==3.4.0
 click==8.1.7
 gitdb==4.0.11
+GitPython==3.1.43
 idna==3.10
 Jinja2==3.1.4
 jsonschema==4.23.0
@@ -20,8 +15,12 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 narwhals==1.13.5
-numpy==1.24.3  # Fixed numpy version for compatibility
+numpy==2.1.3
+opencv-python==4.10.0.84
+opencv-python-headless==4.10.0.84
 packaging==24.2
+pandas==2.2.3
+pillow==11.0.0
 protobuf==5.28.3
 pyarrow==18.0.0
 pydeck==0.9.1
@@ -29,12 +28,14 @@ Pygments==2.18.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
 pyzbar==0.1.9
+qrcode==8.0
 referencing==0.35.1
 requests==2.32.3
 rich==13.9.4
 rpds-py==0.21.0
 six==1.16.0
 smmap==5.0.1
+streamlit==1.40.1
 tenacity==9.0.0
 toml==0.10.2
 tornado==6.4.1
